--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,11 @@
   <body>
     <tag-a>
       <tag-b>
+        <tag-c></tag-c>
+      </tag-b>
+    </tag-a>
+    <tag-a>
+      <tag-b>
         <tag-c> I want space </tag-c>
       </tag-b>
     </tag-a>
