It's working perfectly

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background-color: #18191b;
+        color: #fff;
+        font-size: larger;
+      }
+    </style>
   </head>
   <body>
+    <h1>Heading 1</h1>
     <tag-a>
       <tag-b>
+        <p>hello</p>
         <tag-c></tag-c>
+        <p>goodbye</p>
       </tag-b>
     </tag-a>
+    <footer>
+      <hr />
+      footer
+    </footer>
   </body>
 </html>
