--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,13 @@
         <p>goodbye</p>
       </tag-b>
     </tag-a>
+    <tag-a>
+      <tag-b>
+        <p>hello</p>
+        <tag-c></tag-c>
+        <p>goodbye</p>
+      </tag-b>
+    </tag-a>
     <footer>
       <hr />
       footer
