Multiple components per level works now

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,9 @@
       <tag-b>
         <p>hello</p>
         <tag-c></tag-c>
+        <tag-c></tag-c>
+        <tag-d></tag-d>
+        <tag-d></tag-d>
         <p>goodbye</p>
       </tag-b>
     </tag-a>
@@ -26,6 +29,7 @@
       <tag-b>
         <p>hello</p>
         <tag-c></tag-c>
+        <tag-d></tag-d>
         <p>goodbye</p>
       </tag-b>
     </tag-a>
