attrs does not break parsing

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Heading 1</h1>
-    <tag-a>
+    <tag-a data-bascik-test="hello">
       <tag-b>
         <p>hello</p>
         <tag-c></tag-c>
