Watching all html files in components and pages directory recursively

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,17 +11,24 @@
         color: #fff;
         font-size: larger;
       }
+      a:link,
+      a:visited,
+      a:active {
+        color: #ffffff;
+      }
+      a:hover {
+        color: #d3ff8d;
+      }
     </style>
   </head>
   <body>
+    <custom-nav></custom-nav>
     <h1>About</h1>
     <tag-a data-bascik-test="hello">
       <tag-b>
         <p>collin</p>
         <tag-c></tag-c>
         <tag-c></tag-c>
-        <tag-d></tag-d>
-        <tag-d></tag-d>
         <p>tena</p>
       </tag-b>
     </tag-a>
