--- a/pages/new.html
+++ b/pages/new.html
@@ -23,28 +23,6 @@
   </head>
   <body>
     <custom-nav></custom-nav>
-    <h1>Heading 1</h1>
-    <tag-a data-bascik-test="hello">
-      <tag-b>
-        <p>hello</p>
-        <tag-c></tag-c>
-        <tag-c></tag-c>
-        <tag-d></tag-d>
-        <tag-d></tag-d>
-        <p>goodbye</p>
-      </tag-b>
-    </tag-a>
-    <tag-a>
-      <tag-b>
-        <p>hello</p>
-        <tag-c></tag-c>
-        <tag-d></tag-d>
-        <p>goodbye</p>
-      </tag-b>
-    </tag-a>
-    <footer>
-      <hr />
-      footer
-    </footer>
+    <h1>hello world</h1>
   </body>
 </html>
