Validate no errors when /pages or /components dir does not exist & Rudimentary 404 handeling for custom HTTP2 server

--- a/pages/404.html
+++ b/pages/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sub Page</title>
+    <title>404 Not Found</title>
     <style>
       body {
         background-color: #18191b;
@@ -23,14 +23,6 @@
   </head>
   <body>
     <custom-nav></custom-nav>
-    <h1>Index</h1>
-    <tag-a></tag-a>
-    <tag-b></tag-b>
-    <tag-c></tag-c>
-    <tag-d></tag-d>
-    <footer>
-      <hr />
-      footer
-    </footer>
+    <h1>Not Found</h1>
   </body>
 </html>
