Add scoped styles via classes

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,9 +40,6 @@
         <p>tena</p>
       </tag-b>
     </tag-a>
-    <footer>
-      <hr />
-      footer
-    </footer>
+    <my-footer></my-footer>
   </body>
 </html>
