--- a/pages/index.html
+++ b/pages/index.html
@@ -42,9 +42,6 @@
         <p>goodbye</p>
       </tag-b>
     </tag-a>
-    <footer>
-      <hr />
-      footer
-    </footer>
+    <my-footer></my-footer>
   </body>
 </html>
