--- a/pages/sub/index.html
+++ b/pages/sub/index.html
@@ -28,9 +28,6 @@
     <tag-b></tag-b>
     <tag-c></tag-c>
     <tag-d></tag-d>
-    <footer>
-      <hr />
-      footer
-    </footer>
+    <my-footer></my-footer>
   </body>
 </html>
