--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <custom-nav></custom-nav>
-    <h1>Index</h1>
+    <h1 id="h1">Index</h1>
     <tag-a data-bascik-test="hello">
       <tag-b>
         <p>hello</p>
