Added support for scoped element styling

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,7 @@
   <body>
     <custom-nav></custom-nav>
     <h1 id="h1">Index</h1>
+    <styled-element-test></styled-element-test>
     <tag-a data-bascik-test="hello">
       <tag-b>
         <p>hello</p>
