Fix bug match whole component names, and regex requires \\b instead of just \b for boundary starting to work on adding js

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,9 @@
   <body>
     <custom-nav></custom-nav>
     <h1 id="h1">Index</h1>
+    <button id="my-btn" type="button">Click Imposter</button>
+    <my-btn></my-btn>
+    <my-btn2></my-btn2>
     <styled-element-test></styled-element-test>
     <tag-a data-bascik-test="hello">
       <tag-b>
