Experimenting with scoped js and petite-vue in components

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,8 +24,13 @@
   <body>
     <custom-nav></custom-nav>
     <h1 id="h1">Index</h1>
+    <v-counter></v-counter>
+    <v-counter2></v-counter2>
+    <v-counter></v-counter>
+    <v-counter2></v-counter2>
     <button id="my-btn" type="button">Click Imposter</button>
     <my-btn></my-btn>
+    <my-btn2></my-btn2>
     <my-btn2></my-btn2>
     <styled-element-test></styled-element-test>
     <tag-a data-bascik-test="hello">
@@ -47,5 +52,6 @@
       </tag-b>
     </tag-a>
     <my-footer></my-footer>
+    <script src="https://unpkg.com/petite-vue" defer init></script>
   </body>
 </html>
