--- a/pages/index.html
+++ b/pages/index.html
@@ -27,6 +27,8 @@
   <body>
     <custom-nav></custom-nav>
     <h1 id="h1">Index</h1>
+    <my-cond></my-cond>
+    <my-prop-test></my-prop-test>
     <v-counter></v-counter>
     <v-counter2></v-counter2>
     <v-counter></v-counter>
