Scoping JavaScript for id attributes is working with both getElementById and querySelector

--- a/pages/index.html
+++ b/pages/index.html
@@ -57,6 +57,8 @@
       </tag-b>
     </tag-a>
     <my-footer></my-footer>
+    <my-footer></my-footer>
+    <my-footer></my-footer>
     <script src="https://unpkg.com/petite-vue" defer init></script>
   </body>
 </html>
