Show styled scopes working with selectors of the same name

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,6 +38,7 @@
     <my-btn2></my-btn2>
     <my-btn2></my-btn2>
     <styled-element-test></styled-element-test>
+    <unstyled-element-test></unstyled-element-test>
     <tag-a data-bascik-test="hello">
       <tag-b>
         <p>hello</p>
