Fixed removal of new lines in script tags

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,6 +28,37 @@
     <custom-nav></custom-nav>
     <h1 id="h1">Index</h1>
     <test-comp></test-comp>
+    <my-cond></my-cond>
+    <my-prop-test></my-prop-test>
+    <v-counter></v-counter>
+    <v-counter2></v-counter2>
+    <v-counter></v-counter>
+    <v-counter2></v-counter2>
+    <button id="my-btn" type="button">Click Imposter</button>
+    <my-btn></my-btn>
+    <my-btn2></my-btn2>
+    <my-btn2></my-btn2>
+    <styled-element-test></styled-element-test>
+    <unstyled-element-test></unstyled-element-test>
+    <tag-a data-bascik-test="hello">
+      <tag-b>
+        <p>hello</p>
+        <tag-c></tag-c>
+        <tag-c></tag-c>
+        <tag-d></tag-d>
+        <tag-d></tag-d>
+        <p>goodbye</p>
+      </tag-b>
+    </tag-a>
+    <tag-a>
+      <tag-b>
+        <p>hello</p>
+        <tag-c></tag-c>
+        <tag-d></tag-d>
+        <p>goodbye</p>
+      </tag-b>
+    </tag-a>
+    <my-footer></my-footer>
     <script src="https://unpkg.com/petite-vue" defer init></script>
   </body>
 </html>
