Fix bug where tags like test-comp and test-comp-clone, test-comp-clone would instead match on test-comp and break

--- a/pages/new.html
+++ b/pages/new.html
@@ -24,5 +24,7 @@
   <body>
     <custom-nav></custom-nav>
     <h1>hello world</h1>
+    <test-comp></test-comp>
+    <test-comp-clone></test-comp-clone>
   </body>
 </html>
