--- a/pages/new.html
+++ b/pages/new.html
@@ -25,6 +25,7 @@
     <custom-nav></custom-nav>
     <h1>hello world</h1>
     <test-comp></test-comp>
+    <test-comp></test-comp>
     <test-comp-clone></test-comp-clone>
   </body>
 </html>
