Add inc component to show interactivity with vanilla js

--- a/pages/sub/par.html
+++ b/pages/sub/par.html
@@ -24,6 +24,7 @@
   <body>
     <custom-nav></custom-nav>
     <h1>Sub Par Page</h1>
+    <inc></inc>
     <my-footer></my-footer>
   </body>
 </html>
