add petite vue example back

--- a/pages/sub/index.html
+++ b/pages/sub/index.html
@@ -28,6 +28,10 @@
     <tag-b></tag-b>
     <tag-c></tag-c>
     <tag-d></tag-d>
+    <v-counter></v-counter>
+    <v-counter></v-counter>
+    <v-counter2></v-counter2>
     <my-footer></my-footer>
+    <script src="https://unpkg.com/petite-vue" defer init></script>
   </body>
 </html>
