- [x] Copy non-html files from pages dir to dist - [x] Serve non html files such as images with the HTTP2 server.

--- a/pages/new.html
+++ b/pages/new.html
@@ -24,6 +24,10 @@
   <body>
     <custom-nav></custom-nav>
     <h1>hello world</h1>
+    <div>
+      <img src="./img/dog.jpg" alt="dog"  width="200px" />
+    </div>
+    <img-example></img-example>
     <test-comp></test-comp>
     <test-comp></test-comp>
     <test-comp-clone></test-comp-clone>
