--- a/pages/sub/par.html
+++ b/pages/sub/par.html
@@ -25,6 +25,10 @@
     <custom-nav></custom-nav>
     <h1>Sub Par Page</h1>
     <inc></inc>
+    <div>
+      <img src="../img/dog.jpg" alt="dog"  width="200px" />
+    </div>
+    <img-example></img-example>
     <my-footer></my-footer>
   </body>
 </html>
