Add examples of CSS files for pages and how to do css for print

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,24 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bascik</title>
-    <style>
-      body {
-        background-color: #18191b;
-        color: #fff;
-        font-size: larger;
-      }
-      a:link,
-      a:visited,
-      a:active {
-        color: #ffffff;
-      }
-      a:hover {
-        color: #d3ff8d;
-      }
-      [v-cloak] {
-        visibility: hidden;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/print.css" media="print" />
   </head>
   <body>
     <custom-nav></custom-nav>
